# rqt_joint_trajectory_plot

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  plugin.xml  setup.py
.github/workflows/: config.yml
launch/: generator.launch  rqt_plot_trajectory_pva.launch
resource/: JointTrajectoryPlot.ui
rqt_perspectives/: 3x_joint_trajectory_plot.perspective
script/: joint_trajectory_generator.py  rqt_joint_trajectory_plot
src/rqt_joint_trajectory_plot/: main_widget.py  plot_widget.py  plugin.py
test/: plot.test
