<?xml version="1.0"?>
<package format="3">
  <name>rqt_joint_trajectory_plot</name>

  <version>0.0.5</version>

  <description>The rqt_joint_trajectory_plot package</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai (TORK) Developer Team</maintainer>

  <author email="ryosuke.tajima@gmail.com">Ryosuke Tajima</author>

  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/rqt_joint_trajectory_plot</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>roslaunch</build_depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosservice</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
